# CatFoodMonitor

./: .gitattributes  CMakeLists.txt  CatDetectionProject  README.md  sshd_config
include/: detection.h  notification.h  yolo.h
src/: detection.cpp  kittyeats.cpp  notification.cpp  yolo.cpp
